--- a/src/app/modules/admin/station-details/components/amenities-tab/amenities-tab.component.scss
+++ b/src/app/modules/admin/station-details/components/amenities-tab/amenities-tab.component.scss
@@ -67,7 +67,7 @@
   }
   
   .amenity-icon {
-    background: #4ac97d;
+    // background: #4ac97d;
     color: #fff;
     border-radius: 50%;
     width: 44px;
