--- a/src/app/modules/admin/example/example.component.html
+++ b/src/app/modules/admin/example/example.component.html
@@ -14,8 +14,7 @@
         </mat-form-field>
         <mat-form-field appearance="outline" floatLabel="always">
             <mat-label>Station Availability</mat-label>
-            <mat-select [(ngModel)]="filterAvailability">
-                <mat-option value="">Select Availability</mat-option>
+            <mat-select [(ngModel)]="filterAvailability" multiple>
                 <mat-option *ngFor="let status of statusFilterOptions" [value]="status.value">
                     {{ status.label }}
                 </mat-option>
@@ -23,8 +22,7 @@
         </mat-form-field>
         <mat-form-field appearance="outline" floatLabel="always">
             <mat-label>Connector Type</mat-label>
-            <mat-select [(ngModel)]="filterConnectorType">
-                <mat-option value="">Select Connector Type</mat-option>
+            <mat-select [(ngModel)]="filterConnectorType" multiple>
                 <mat-option *ngFor="let type of connectorTypeOptions" [value]="type.value">
                     {{ type.label }}
                 </mat-option>
@@ -32,14 +30,13 @@
         </mat-form-field>
         <mat-form-field appearance="outline" floatLabel="always">
             <mat-label>Charge Power</mat-label>
-            <mat-select [(ngModel)]="filterChargePower">
-                <mat-option value="">Select Charge Power</mat-option>
+            <mat-select [(ngModel)]="filterChargePower" multiple>
                 <mat-option *ngFor="let power of chargingPowerOptions" [value]="power.value">
                     {{ power.label }}
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <button mat-flat-button color="primary" class="filter-btn">
+        <button mat-flat-button color="primary" class="filter-btn" (click)="applyFilters()">
             Filter Stations
         </button>
 
