--- a/src/app/modules/admin/example/station-card.component.html
+++ b/src/app/modules/admin/example/station-card.component.html
@@ -21,11 +21,11 @@
     </div>
     <div class="station-card-info-row">
       <span class="station-card-connectors d-flex align-items-center">
-        <img src="megaplug/station-list/watt-green.svg" alt="Connectors" />
+        <img src="megaplug/station-list/watt-green.svg" alt="Connectors" class="w-[14px] h-[14px]" />
         <span class="count">{{ connectors }} connectors</span>
       </span>
       <span class="station-card-power">
-        <img src="megaplug/station-list/fast-charge-yellow.svg" alt="Power" />
+        <img src="megaplug/station-list/fast-charge-yellow.svg" alt="Power" class="w-[14px] h-[14px]" />
         <span class="range">{{ powerRange }}</span>
       </span>
     </div>
