--- a/src/app/modules/admin/example/station-card.component.scss
+++ b/src/app/modules/admin/example/station-card.component.scss
@@ -42,8 +42,8 @@
 }
 
 .station-card-title {
-    font-size: 1.1rem;
-    font-weight: 700;
+    font-size: 14px;
+    font-weight: 500;
     color: #232b32;
     margin-bottom: 2px;
 }
@@ -54,8 +54,8 @@
     right: 0px;
     border-radius: 0 12px 0 12px;
     padding: 8px 28px;
-    font-size: 1rem;
-    font-weight: 600;
+    font-size: 13px;
+    font-weight: 400;
     color: #fff;
     min-width: 100px;
     text-align: center;
@@ -73,7 +73,8 @@
 }
 
 .station-card-address {
-    font-size: 0.98rem;
+    font-size: 11px;
+    font-weight: 400;
     color: #7b8a9b;
     margin-bottom: 0;
 }
@@ -88,18 +89,18 @@
 .station-card-connectors,
 .station-card-power {
     display: flex;
-    align-items: start;
+    align-items: center;
     gap: 2px;
-    font-size: 0.98rem;
     color: #22c58b;
-    font-weight: 500;
 
     img {
-      margin-top: 2px;
+    //   margin-top: 2px;
     }
 
     span {
       color: #6C7E8E;
+      font-size: 11px;
+      font-weight: 400;
     }
 }
 .station-card-power {
