--- a/src/app/modules/settings/components/kw-price/kw-price.component.scss
+++ b/src/app/modules/settings/components/kw-price/kw-price.component.scss
@@ -17,3 +17,7 @@ form .mat-error {
 .egp-suffix {
   padding-right: 8px;
 } 
+
+:host ::ng-deep .mat-mdc-form-field-error-wrapper {
+  padding-left: 0px !important;
+}
