--- a/src/app/modules/admin/example/station-card.component.scss
+++ b/src/app/modules/admin/example/station-card.component.scss
@@ -16,7 +16,7 @@
     width: 72px;
     height: 72px;
     border-radius: 12px;
-    object-fit: cover;
+    object-fit: 100% 100%;
     background: #f4f6fa;
 }
 
