--- a/src/app/modules/admin/example/example.component.html
+++ b/src/app/modules/admin/example/example.component.html
@@ -170,7 +170,10 @@
                                 selectedStation.address_ar
                         }}
                     </div>
-                    <div class="station-rating mt-3">
+                </div>
+                <!-- Station Rating and Toggle on same line -->
+                <div class="station-rating-toggle">
+                    <div class="station-rating">
                         <span class="star">
                             <img
                                 src="/megaplug/icons/star-bold.svg"
@@ -179,6 +182,11 @@
                         </span>
                         4.9
                     </div>
+                    <mat-slide-toggle
+                        color="primary"
+                        [(ngModel)]="selectedStation.is_active"
+                        (change)="onToggleActive($event)"
+                    ></mat-slide-toggle>
                 </div>
                 <!-- Divider -->
                 <div class="station-divider"></div>
